# CMake_H743_LCD_Driver0_1

./: .mxproject  CMakeLists.txt  CMake_LCD_Driver0_1.ioc  STM32H743XG_FLASH.ld
Core/Inc/: ft6336u.h  lcd.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Core/Src/: ft6336u.c  gpio.c  lcd.c  lv_port_disp.c  lv_port_indev.c  main.c  quadspi.c  spi.c  stm32h7xx_it.c  usart.c
Middlewares/lvgl/: lv_conf.h
User_Modules/GUI_App/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
User_Modules/GUI_App/components/: ui_comp_hook.c
User_Modules/GUI_App/images/: ui_img_1598979325.c
User_Modules/GUI_App/screens/: ui_Screen1.c  ui_Screen1.h
User_Modules/lvgl/: lv_conf.h
cmake/: starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
